[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pisa-api"
version = "0.1.20"
description = "gRPC (SIM/AV) API contract for SBSVF"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.62.3",
    "protobuf>=4.24.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pisa_api"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.62.3",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
# Generated protobuf/grpc stubs are not source we maintain — exclude
# them from lint, otherwise every regeneration churns a 50-error diff.
extend-exclude = ["*_pb2.py", "*_pb2.pyi", "*_pb2_grpc.py"]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501 (line too long) is enforced by `ruff format`, not the linter.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
